Update the RandomIterator to improve runtime